--- a/frontend/core/src/main/webapp/static/app/main/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageHeader.html
@@ -1,53 +1,14 @@
-<nav id="{{feature}}-footer" class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
-  <div ng-if="!omnibarVisible">
-    <div class="left-of-three" id="menu" ng-style="{width: currentWidth * 0.5 - 100}">
-      <div id="menu-icon">
-        <button id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
-          <span class="icon-menu"></span>
-        </button>
-      </div>
-      <div ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
-    </div>
-    <div class="center-of-three" id="page-heading"></div>
-    <div class="right-of-three swiper-no-swiping" id="add-new-button" ng-style="{width: currentWidth * 0.5 - 100}">
-      <button type="button" class="button" ng-click="addNew()">
-        <span class="icon-plus"></span>
-      </button>
-    </div>
+<nav id="{{feature}}-header" class="swiper-no-swiping" role="navigation" ng-if="!omnibarVisible" ng-controller="HeaderController">
+  <div id="menu-button-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
+    <button id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
+      <span class="icon-menu"></span>
+    </button>
   </div>
-  <div id="omnibar-search-results" ng-if="omnibarVisible && omnibarText.title.length > 0" id="filtered-items-container"> 
-    <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
-      <h3 ><a href ng-click="gotoInbox()" class="page-header">inbox</a></h3>
-      <div class="inner-page-content-container" accordion>
-        <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})">
-          <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
-          <div class="accordion-body" ng-if="isOpen(item)">
-            <div ng-include="'static/app/main/itemActions.html'"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="filtered-items" ng-show="filteredTasks.length" ng-controller="TasksController">
-      <h3><a href ng-click="gotoTasks()" class="page-header">tasks</a></h3>
-      <div class="inner-page-content-container" accordion>
-        <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})">
-          <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-          <div class="accordion-body" ng-if="isOpen(task)">
-            <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="filtered-items" ng-show="filteredNotes.length" ng-controller="NotesController">
-      <h3><a href ng-click="gotoNotes()" class="page-header">notes</a></h3>
-      <div class="inner-page-content-container" accordion>
-        <div ng-repeat="note in filteredNotes = (notes | filter:{title:omnibarText.title})">
-          <div accordion-title="note" edit-item="editNote(task)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
-          <div class="accordion-body" ng-if="isOpen(note)">
-            <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div id="omnibar-label-wrapper"><label for="{{getCurrentHeading()}}OmnibarInput" ng-style="{width: getLabelWidth()}">&nbsp;</label></div>
+  <div id="plus-button-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
+    <button id="plus-button" type="button" ng-click="addNew()" alt="add new">
+      <span class="icon-plus"></span>
+    </button>
   </div>
 </nav>
+
