--- a/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
@@ -1,11 +1,11 @@
-<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" ng-show="isSnapVisible" id="drawer" class="snap-drawer snap-drawer-left" scrollable></div>
+<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" ng-show="isSnapVisible" id="mobile-menu" class="snap-drawer snap-drawer-left" scrollable></div>
 <div class="slides-container" ng-init="feature='notes'" ng-controller="MainController" snap-directive>
-  <!-- TODO: use ng-if with expected-slides="notes.length > 0 && 6 || 2" -->
-  <div class="swiper-container main-slides" swiper-container="notes" swiper-type="main"
-  expected-slides="1">
-  <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
-    <div class="swiper-slide" swiper-slide="notes/home" slide-index=0 ng-include="'static/app/notes/recent.html'"></div>
+  <header class="page-header" ng-class="omnibarVisible && 'header-hidden'"  ng-include="'static/app/main/pageHeader.html'"></header>
+  <div class="swiper-container main-slides" swiper-container="notes" swiper-type="main" expected-slides="1">
+    <div ng-hide="isDesktop && isMenuOpen"  class="swiper-wrapper" ng-class="getNoSwipingClass()">
+      <div class="swiper-slide" swiper-slide="notes/home" slide-index=0 ng-include="'static/app/notes/recent.html'"></div>
+    </div>
+    <div id="desktop-menu" ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>  
   </div>
-</div>
-<footer ng-include="'static/app/main/footer.html'"></footer>
+  <footer ng-if="!omnibarVisible" ng-include="'static/app/main/footer.html'"></footer>
 </div>
