--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -1,7 +1,7 @@
 <section id="notes-recent" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
-    <header class="page-header" ng-init="heading='recent notes'" ng-include="'static/app/base/pageHeader.html'"></header>
-    <div class="content-container page-content-container">
+    <div class="page-heading swiper-no-swiping" ng-init="heading='recent'" ng-include="'static/app/main/omnibar.html'"></div>
+    <div ng-hide="omnibarVisible" class="content-container page-content-container">
       <div class="inner-page-content-container">
         <div>
           <div class="inner-page-content-container" accordion>
