--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,7 +1,7 @@
 <section id="tasks-dates" class="two-column-grid page single-lineheight" ng-controller="DatesController">
   <div class="column" ng-controller="TasksController">
-    <div class="page-heading swiper-no-swiping" ng-init="heading='dates'" ng-include="'static/app/base/omnibar.html'"></div>
-    <div id="tasks-dates-page-content-container" class="content-container page-content-container">
+    <div class="page-heading swiper-no-swiping" ng-init="heading='dates'" ng-include="'static/app/main/omnibar.html'"></div>
+    <div ng-hide="omnibarVisible" class="content-container page-content-container">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
         <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
