--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -1,6 +1,6 @@
 <section id="tasks-details" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
-    <div class="page-heading swiper-no-swiping" ng-init="heading='details'" ng-include="'static/app/main/omnibar.html'"></div>
+    <div class="page-heading swiper-no-swiping" ng-init="heading='tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible" class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/details" swiper-type="page" expected-slides="count = lists.length + contexts.length + 1">
         <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
@@ -11,7 +11,7 @@
                 <div ng-if="showListContent" ng-include="'static/app/base/listActions.html'"></div>
                 <div>
                   <div class="inner-page-content-container" accordion>
-                    <div ng-repeat="task in tasks | tasksFilter:{name:'byListUUID', filterBy: list.uuid}">
+                    <div ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div class="accordion-body" ng-if="isOpen(task)">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                   <div class="inner-page-content-container" accordion>
-                    <div ng-repeat="task in tasks | tasksFilter:{name:'byContextUUID', filterBy: context.uuid}">
+                    <div ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div class="accordion-body" ng-if="isOpen(task)">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
@@ -51,7 +51,7 @@
               <section>
                 <h3>uncategorized</h3>              
                 <div class="inner-page-content-container" accordion>
-                  <div ng-repeat="task in tasks | tasksFilter:{name:'unsorted'}" ng-init="subtask = {}">
+                  <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
                     <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                     <div class="accordion-body" ng-if="isOpen(task)">
                       <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
