--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,7 +1,7 @@
 <div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left" scrollable></div>
-<div class="no-slides-container" ng-init="feature='inbox'" ng-controller="MainController" snap-directive>
+<div class="no-slides-container" ng-init="feature='inbox'" ng-controller="MainController" snap-drawer>
   <header ng-class="omnibarVisible && 'header-hidden'" class="page-header" ng-include="'static/app/main/pageHeader.html'"></header>
-  <section ng-hide="isDesktop && isMenuOpen" id="inbox" class="two-column-grid page header-page" ng-controller="ItemsController">
+  <section ng-hide="isDesktop && isMenuOpen" id="inbox" class="two-column-grid page header-page" ng-controller="ItemsController" snap-drawer-drag>
     <div class="column">
       <div class="page-heading swiper-no-swiping" ng-init="heading='inbox'" ng-include="'static/app/main/omnibar.html'"></div>
       <div ng-if="!omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container">
