--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -7,7 +7,7 @@
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/details/{{list.uuid}}" slide-index="$index" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
               <section class="list" ng-controller="ListsController">
-                <h3><a class="content" href ng-click="toggleListContent()">{{list.title}}</a></h3>
+                <h3><a href ng-click="toggleListContent()">{{list.title}}</a></h3>
                 <div ng-if="showListContent" ng-include="'static/app/base/listActions.html'"></div>
                 <div>
                   <div class="inner-page-content-container" accordion>
@@ -26,7 +26,7 @@
           <div class="swiper-slide" ng-repeat="context in contexts" swiper-slide="tasks/details/{{context.uuid}}" slide-index="lists.length + $index" ng-init="subtask = {relationships: {context: context.uuid}}">
             <div class="inner-slide-content-container">
               <section class="context" ng-controller="ContextsController">
-                <h3><a class="content" href ng-click="toggleContextContent()">@{{context.title}}</a></h3>
+                <h3><a href ng-click="toggleContextContent()">@{{context.title}}</a></h3>
                 <div ng-if="showContextContent">
                   <button class="wide-button default-button" type="button" ng-click="editContext(context)">
                     more
