--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -47,17 +47,19 @@
             </div>
           </div>
           <div class="swiper-slide" swiper-slide="tasks/details/uncategorized" slide-index="lists.length + contexts.length" ng-init="subtask = {}">
-            <div class="inner-page-content-container">
-              <section>
-                <h3>uncategorized</h3>              
-                <div class="inner-page-content-container" accordion>
-                  <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
-                    <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                    <div class="accordion-body" ng-if="isOpen(task)">
-                      <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+            <div class="inner-slide-content-container">
+              <section class="uncategorized">
+                <h3>uncategorized</h3>
+                <div>              
+                  <div class="inner-page-content-container" accordion>
+                    <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
+                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                      <div class="accordion-body" ng-if="isOpen(task)">
+                        <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+                      </div>
                     </div>
+                    <div ng-include="'static/app/tasks/addTask.html'"></div>
                   </div>
-                  <div ng-include="'static/app/tasks/addTask.html'"></div>
                 </div>
               </section>
             </div>
