--- a/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesSlides.html
@@ -2,7 +2,7 @@
 <div class="slides-container" ng-init="feature='notes'; homeHeading='recent';" ng-controller="MainController" snap-drawer>
   <header class="page-header" ng-class="omnibarVisible && 'header-hidden'"  ng-include="'static/app/main/pageHeader.html'"></header>
   <div class="swiper-container main-slides" swiper-container="notes" swiper-type="main" expected-slides="3">
-    <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper" ng-class="getNoSwipingClass()">
+    <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper" ng-class="getPreventSwipeClass()">
       <div class="swiper-slide" swiper-slide="notes/home" slide-index=0 ng-include="'static/app/notes/recent.html'" snap-drawer-drag></div>
       <div class="swiper-slide" swiper-slide="notes/overview" slide-index=1 ng-include="'static/app/notes/overview.html'"></div>
       <div class="swiper-slide" swiper-slide="notes/details" slide-index=2 ng-include="'static/app/notes/details.html'"></div>
