--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -4,7 +4,7 @@
     <div ng-hide="omnibarVisible" class="content-container page-content-container">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
-        <div class="swiper-wrapper" ng-class="getPreventSwipeClass()">
+        <div class="swiper-wrapper">
           <!-- repeat weekday in weekdays -->
           <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
             <!-- init DatesController.getSubtask -->
