--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -9,7 +9,7 @@
     <li>
       <a href class="feature-link" ng-click="gotoNotes()" ng-class="getFeatureClass('notes')">notes</a>
     </li>
-    <li>
+    <li id="last-feature">
       <a href class="feature-link" ng-click="gotoInbox()" ng-class="getFeatureClass('inbox')">inbox</a>
     </li>
     <li id="my" ng-show="useCollectives()">
