Disable link highlightin in IE on Windows Phone.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-tap-highlight" content="no" />
   <title ng-bind="page.getTitle()"></title>
   <link rel="stylesheet" href="static/css/em.css"/>
   <link rel="shortcut icon" href="static/favicon.ico"/>
