--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-tap-highlight" content="no" />
     <title ng-bind="pageTitle.getTitle()"></title>
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
@@ -116,10 +117,10 @@
     <script>
         function MockController(MockBackendService) {
           MockBackendService.mockBackend();
-        }
+      }
 
-        MockController.$inject = ['MockBackendService'];
-        angular.module('em.appTest').factory('MockController', MockController);
-    </script>
+      MockController.$inject = ['MockBackendService'];
+      angular.module('em.appTest').factory('MockController', MockController);
+  </script>
 </body>
 </html>
