--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -13,7 +13,7 @@
               </a>
             </li>
             <li>
-              <form class="swiper-no-swiping" role="form" name="addContextForm" ng-submit="addContext(newContext)">
+              <form class="swiper-no-swiping add-element" role="form" name="addContextForm" ng-submit="addContext(newContext)" autocapitalize="none" autocorrect="off">
                 <div class="form-group">
                   <label class="sr-only" for="contextTitle">title</label>
                   <input type="text" class="simple-input" id="contextTitle" ng-model="newContext.title" placeholder="add context..."></input>
