--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li>
-      <form class="swiper-no-swiping" role="form" name="addListForm" ng-submit="addList(newList)">
+      <form class="swiper-no-swiping add-element" role="form" name="addListForm" ng-submit="addList(newList)" autocapitalize="none" autocorrect="off">
         <div class="form-group">
           <label class="sr-only" for="listTitle">title</label>
           <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..."></input>
