--- a/frontend/core/src/main/webapp/static/app/main/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageHeader.html
@@ -1,9 +1,11 @@
 <nav id="{{feature}}-header" class="swiper-no-swiping" role="navigation" ng-if="!omnibarVisible" ng-controller="HeaderController">
   <div id="active-action-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
-    <button ng-if="!isDatepickerVisible" id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
-      <span class="icon-menu"></span>
-    </button>
-    <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
+    <div id="active-action-content-wrapper">
+      <button ng-if="!isDatepickerVisible" id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
+        <span class="icon-menu"></span>
+      </button>
+      <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
+    </div>
   </div>
   <div id="omnibar-label-wrapper"><label for="{{getCurrentHeading()}}OmnibarInput" ng-style="{width: getLabelWidth()}">&nbsp;</label></div>
   <div id="plus-button-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
