--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -29,6 +29,9 @@
       <a href="#/my/account">account</a>
     </li>
     <li>
+      <a href="#/about">about</a>
+    </li>
+    <li>
       <a href ng-click="logout()">logout</a>
     </li>
   </ul>
