Previous and next week arrows to datepicker when on desktop.

--- a/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
@@ -3,52 +3,64 @@
     <nav ng-repeat="week in datepickerWeeks" role="navigation" class="slide">
       <ul class="horizontally-justified">
 
-        <li class="justified-element datepicker-date">
+        <li ng-if="isDesktop">
+          <a href ng-click="previousWeek()">
+            <span class="icon-arrow_left"></span>
+          </a>
+        </li>
+
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[0])" href ng-click="dateClicked(week[0])">
             <span>{{visibleDateFormat(week[0])}}</span>
             <span class="day-date">{{week[0].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[1])" href ng-click="dateClicked(week[1])">
             <span>{{visibleDateFormat(week[1])}}</span>
             <span class="day-date">{{week[1].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[2])" href ng-click="dateClicked(week[2])">
             <span>{{visibleDateFormat(week[2])}}</span>
             <span class="day-date">{{week[2].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[3])" href ng-click="dateClicked(week[3])">
             <span>{{visibleDateFormat(week[3])}}</span>
             <span class="day-date">{{week[3].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[4])" href ng-click="dateClicked(week[4])">
             <span>{{visibleDateFormat(week[4])}}</span>
             <span class="day-date">{{week[4].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[5])" href ng-click="dateClicked(week[5])">
             <span>{{visibleDateFormat(week[5])}}</span>
             <span class="day-date">{{week[5].date}}</span>
           </a>
         </li>
 
-        <li class="justified-element datepicker-date">
+        <li class="datepicker-date">
           <a ng-class="getDateClass(week[6])" href ng-click="dateClicked(week[6])">
             <span>{{visibleDateFormat(week[6])}}</span>
             <span class="day-date">{{week[6].date}}</span>
+          </a>
+        </li>
+
+        <li ng-if="isDesktop">
+          <a href ng-click="nextWeek()">
+            <span class="icon-arrow_right"></span>
           </a>
         </li>
 
