Beginnings of analytics to frontend

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -49,6 +49,7 @@
     <script src="static/app/base/http/HttpRequestQueueService.js"></script>
     <script src="static/app/base/storage/LocalStorageService.js"></script>
     <script src="static/app/base/storage/SessionStorageService.js"></script>
+    <script src="static/app/base/AnalyticsService.js"></script>
     <script src="static/app/base/ArrayService.js"></script>
     <script src="static/app/base/BackendClientService.js"></script>
     <script src="static/app/base/BackendInterceptorService.js"></script>
