--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
     <link rel="shortcut icon" href="landing/favicon.ico"/>
+    <script>
+        var packaging = "devel";
+    </script>
 </head>
 <body>
 
