--- a/frontend/phonegap/app/www/index.html
+++ b/frontend/phonegap/app/www/index.html
@@ -26,6 +26,8 @@
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/css/em.css"/>
     <script>
+      // TODO: use different index.html files with "android-phonegap" / "ios-phonegap"!
+      var packaging = "phonegap";
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
       var bindToFocusEvent = false;
