Onboarding carousel in modal.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -70,6 +70,7 @@
     <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
+    <script src="static/app/base/onboarding.js"></script>
 
     <script src="static/app/auth/AuthenticationService.js"></script>
     <script src="static/app/auth/ForgotController.js"></script>
