--- a/frontend/core/src/main/webapp/static/app/notes/overview.html
+++ b/frontend/core/src/main/webapp/static/app/notes/overview.html
@@ -5,7 +5,7 @@
       <div class="inner-page-content-container">
         <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
         <section>
-          <h3><a href ng-click="gotoDetails('uncategorized')" class="page-header">uncategorized</a></h3>
+          <h3><a href ng-click="gotoDetails('recent')" class="page-header">recent</a></h3>
         </section>
       </div>
     </div>
